# ballistics-engine

./: README.md
engine/: Cargo.toml
engine/src/: forces.rs  main.rs  objects.rs
od/: 01_cubesat_hf_prop.oem  01_cubesat_hf_prop.parquet  Cargo.toml  boulder_cubesat.tdm
od/src/: doppler_simulator.rs  main.rs  util.rs
