[package]
name = "rust_od"
version = "0.1.0"
edition = "2021" # Note: 2024 is very new; 2021 is safer for some dependencies

[dependencies]
anise = "=0.9.6"        # Pin to exactly the version nyx uses
hifitime = "4.3.0"
log = "0.4.29"
nyx-space = { git = "https://github.com/nyx-space/nyx.git", rev = "e0f9489" }
polars = "0.53.0"
pretty_env_logger = "0.5.0"
# Remove hifitime unless you need a specific version — 
# otherwise let Cargo resolve it through nyx's dependency